disable Travis, enable Github Workflow push trigger

--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -4,9 +4,9 @@ on:
   pull_request:
     branches: [master, devel]
     tags: ['fw-v*']
-  #push:
-  #  branches: [master, devel]
-  #  tags: ['fw-v*']
+  push:
+    branches: [master, devel]
+    tags: ['fw-v*']
 
 jobs:
   compile:
