--- a/docs/_data/index.yaml
+++ b/docs/_data/index.yaml
@@ -17,6 +17,8 @@ sections:
         url: /encoders
       - title: Homing & Endstops
         url: /endstops
+      - title: Thermistors
+        url: /thermistors
       - title: Control & Tuning
         url: /control
       - title: Troubleshooting
