--- a/Firmware/odrive-interface.yaml
+++ b/Firmware/odrive-interface.yaml
@@ -621,9 +621,8 @@ interfaces:
         flags:
           Overspeed:
             doc: |
-              Try increasing `config.vel_limit`. The default of 20,000 encoder
-              counts per second gives a motor speed of only ~146 RPM with the
-              common CUI-AMT102 8192 count per rotation encoder. Note: Even if
+              Try increasing `config.vel_limit`. The default of 2 turns per second 
+              gives a motor speed of only 120 RPM. Note: Even if
               you do not commanded your motor to exceed `config.vel_limit`
               sudden changes in the load placed on a motor may cause this speed
               to be temporarily exceeded, resulting in this error.
@@ -687,13 +686,13 @@ interfaces:
             type: bool
           circular_setpoint_range:
             type: float32
-            doc: circular range in [rad] for position setpoints when circular_setpoints is True
+            doc: circular range in [turns] for position setpoints when circular_setpoints is True
           homing_speed:
             type: float32
-            unit: counts/s
+            unit: turns/s
           inertia:
             type: float32
-            unit: A/(count/s^2)
+            unit: A/(turn/s^2)
           axis_to_mirror: uint8
           mirror_ratio: float32
           load_encoder_axis:
@@ -957,8 +956,8 @@ valuetypes:
         brief: Ramps a velocity command from the current value to the target value.
         doc: |
           ### Configuration Values:
-          * `config.vel_ramp_rate` [cpr/sec]
-          * `config.inertia` [A/(count/s^2))]
+          * `config.vel_ramp_rate` [turn/sec]
+          * `config.inertia` [A/(turn/s^2))]
 
           ### Valid inputs:
           * `input_vel`
