--- a/tools/test-rig-rpi.yaml
+++ b/tools/test-rig-rpi.yaml
@@ -67,16 +67,16 @@ connections:
   - ['teensy.program', 'rpi.gpio26']
   - ['teensy.gpio12', 'rpi.uart0.tx']
   - ['teensy.gpio13', 'rpi.uart0.rx']
-  - ['teensy.gpio11', 'odrive.gpio1']
-  - ['teensy.gpio10', 'odrive.gpio2']
-  - ['teensy.gpio9', 'odrive.gpio3']
-  - ['teensy.gpio8', 'odrive.gpio4']
+  - ['teensy.gpio7', 'odrive.gpio1'] # This is Teensy's RX2 pin
+  - ['teensy.gpio8', 'odrive.gpio2'] # This is Teensy's TX2 pin
+  - ['teensy.gpio11', 'odrive.gpio3']
+  - ['teensy.gpio10', 'odrive.gpio4']
   - ['teensy.gpio14', 'odrive.gpio5']
   - ['teensy.gpio15', 'odrive.gpio6']
   - ['teensy.gpio16', 'odrive.gpio7']
   - ['teensy.gpio17', 'odrive.gpio8']
   - ['teensy.gpio6', 'rpi.gpio20']
-  - ['teensy.gpio7', 'rpi.gpio19']
+  - ['teensy.gpio9', 'rpi.gpio19']
   - ['teensy.gpio23', 'odrive.encoder0.z']
   - ['teensy.gpio22', 'odrive.encoder0.b']
   - ['teensy.gpio21', 'odrive.encoder0.a']
