--- a/Firmware/odrive-interface.yaml
+++ b/Firmware/odrive-interface.yaml
@@ -604,6 +604,7 @@ interfaces:
           BrakeDutyCycleNan:
           DcBusOverRegenCurrent: {doc: too much current pushed into the power supply}
           DcBusOverCurrent: {doc: too much current pulled out of the power supply}
+          ModulationIsNan:
       armed_state:
         typeargs: {fibre.Property.mode: readonly}
         values:
