--- a/Firmware/odrive-interface.yaml
+++ b/Firmware/odrive-interface.yaml
@@ -454,30 +454,38 @@ interfaces:
       trap_traj: TrapezoidalTrajectory
       min_endstop: Endstop
       max_endstop: Endstop
-      task_times: TaskTime
+      task_times: TaskTimes
     functions:
       watchdog_feed:
         doc: Feed the watchdog to prevent watchdog timeouts.
       clear_errors:
         doc: Check the watchdog timer for expiration. Also sets the watchdog error bit if expired.
 
-  ODrive.Axis.TaskTime:
+  ODrive.Axis.TaskTimes:
     c_is_class: False
     attributes:
-      thermistor_update: uint16
-      encoder_update: uint16
-      sensorless_update: uint16
-      min_endstop_update: uint16
-      max_endstop_update: uint16
-      axis_update: uint16
-      axis_error_check: uint16
-      controller_update: uint16
-      motor_update: uint16
-      control_loop: uint16
-      update_handler: uint16
-      brake_update: uint16
-      adc_cb: uint16
-      total: uint32
+      thermistor_update: TaskTimer
+      encoder_update: TaskTimer
+      sensorless_update: TaskTimer
+      min_endstop_update: TaskTimer
+      max_endstop_update: TaskTimer
+      axis_update: TaskTimer
+      axis_error_check: TaskTimer
+      controller_update: TaskTimer
+      motor_update: TaskTimer
+      control_loop: TaskTimer
+      update_handler: TaskTimer
+      brake_update: TaskTimer
+      adc_cb: TaskTimer
+      total: TaskTimer
+
+  ODrive.TaskTimer:
+    c_is_class: False
+    attributes:
+      startTime: readonly uint32
+      endTime: readonly uint32
+      length: readonly uint32
+      maxLength: readonly uint32
 
   ODrive.Axis.LockinConfig:
     c_is_class: False
