End page for config wizard, additional icon for hall effect encoder

--- a/GUI/src/assets/wizard/configTemplate.json
+++ b/GUI/src/assets/wizard/configTemplate.json
@@ -1,5 +1,7 @@
 {
-    "brake_resistance" : null,
+    "config": {
+      "brake_resistance" : null
+    },
     "axis0" : {
       "motor" : {
         "config" : {
