--- a/GUI/src/assets/wizard/configTemplate.json
+++ b/GUI/src/assets/wizard/configTemplate.json
@@ -1,53 +1,55 @@
 {
-    "config": {
-      "brake_resistance" : null
+  "config": {
+    "brake_resistance": null
+  },
+  "axis0": {
+    "motor": {
+      "config": {
+        "pole_pairs": null,
+        "phase_resistance": null,
+        "phase_inductance": null,
+        "motor_type": null,
+        "current_lim": null,
+        "torque_constant": null
+      }
     },
-    "axis0" : {
-      "motor" : {
-        "config" : {
-          "pole_pairs" : null,
-          "phase_resistance" : null,
-          "phase_inductance": null,
-          "motor_type": null,
-          "current_lim": null
-            }
-        },
-      "encoder" : {
-        "config" : {
-          "mode": null,
-          "use_index": null,
-          "cpr": null
-            }
-        },
-      "controller" : {
-        "config" : {
-          "control_mode" : null,
-          "vel_limit" : null
-            }
-        }
+    "encoder": {
+      "config": {
+        "mode": null,
+        "use_index": null,
+        "cpr": null
+      }
     },
-    "axis1" : {
-      "motor" : {
-        "config" : {
-          "pole_pairs" : null,
-          "phase_resistance": null,
-          "phase_inductance": null,
-          "motor_type": null,
-          "current_lim": null
-            }
-        },
-      "encoder" : {
-        "config" : {
-          "mode": null,
-          "use_index" : null,
-          "cpr": null
-            }
-        },
-      "controller" : {
-        "config" : {
-          "control_mode" : null,
-          "vel_limit" : null
-            }
-        }
+    "controller": {
+      "config": {
+        "control_mode": null,
+        "vel_limit": null
+      }
     }
+  },
+  "axis1": {
+    "motor": {
+      "config": {
+        "pole_pairs": null,
+        "phase_resistance": null,
+        "phase_inductance": null,
+        "motor_type": null,
+        "current_lim": null,
+        "torque_constant": null
+      }
+    },
+    "encoder": {
+      "config": {
+        "mode": null,
+        "use_index": null,
+        "cpr": null
+      }
+    },
+    "controller": {
+      "config": {
+        "control_mode": null,
+        "vel_limit": null
+      }
+    }
+  }
 }
