add finishing touches to initial libfibre version

--- a/Firmware/fibre-cpp/Makefile
+++ b/Firmware/fibre-cpp/Makefile
@@ -1,16 +1,12 @@
 
-# pkgconf --cflags libusb
-# pkgconf --libs libusb
-
-# Prerequisites:
-#  Ubuntu: libusb-dev
-
 ifeq ($(OS),Windows_NT)
 	target = windows
     ifeq ($(PROCESSOR_ARCHITEW6432),AMD64)
     	outname = libfibre-windows-amd64.dll
+    else ifeq ($(PROCESSOR_ARCHITECTURE),AMD64)
+    	outname = libfibre-windows-amd64.dll
     else
-        $(error unsupported platform)
+        $(error unsupported platform ${PROCESSOR_ARCHITECTURE})
     endif
 else ifeq ($(shell uname -s),Linux)
 	target = linux
@@ -41,15 +37,10 @@ linux:
 	g++ -shared -o $(outname) -fPIC -std=c++11 -I/usr/include/libusb-1.0 -I./include -DFIBRE_COMPILE -DFIBRE_ENABLE_CLIENT \
 		$(FILES) \
 		-lusb-1.0
-
-linux-cross:
-	arm-linux-gnueabihf-g++ -march=armv7 -shared -o libfibre.so -fPIC -std=c++11 -I/usr/include/libusb-1.0 -I./include -DFIBRE_COMPILE -DFIBRE_ENABLE_CLIENT \
-		$(FILES) \
-		-lusb
-
 windows:
 	g++ -shared -o $(outname) -fPIC -std=c++11 -I./third_party/libusb-windows/libusb-1.0.23/include/libusb-1.0 -I./include -DFIBRE_COMPILE -DFIBRE_ENABLE_CLIENT \
 		$(FILES) \
 		-static-libgcc -Wl,-Bstatic -lstdc++ ./third_party/libusb-windows/libusb-1.0.23/MinGW64/static/libusb-1.0.a -Wl,-Bdynamic
 
-# nm -D libfibre.so | grep T
+# To check exported symbols run:
+#   nm -D libfibre.so | grep T
