Wizard changes page now shows enums instead of numeric values Encoder page has a working configuration test

--- a/GUI/src/assets/wizard/configTemplate.json
+++ b/GUI/src/assets/wizard/configTemplate.json
@@ -22,6 +22,7 @@
     },
     "controller": {
       "config": {
+        "input_mode": null,
         "control_mode": null,
         "vel_limit": null,
         "inertia": null
@@ -55,6 +56,7 @@
     },
     "controller": {
       "config": {
+        "input_mode": null,
         "control_mode": null,
         "vel_limit": null,
         "inertia": null
