--- a/GUI/package.json
+++ b/GUI/package.json
@@ -21,6 +21,7 @@
     "file-saver": "^2.0.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
+    "typeface-roboto": "0.0.75",
     "uuid": "^8.2.0",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
