--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,9 @@ ODrive\.files
 ODrive\.includes
 
 Firmware/Tests/bin/
+
+# Electron-builder output
+GUI/dist_electron
+
+# Node Modules
+GUI/node_modules
