enable custom Github Pages autogen

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -2,7 +2,7 @@ name: Build and publish HTML documentation website
 
 on:
   push:
-    branches: [ feature/doc_autogen ]
+    branches: [ master ]
 
 jobs:
   jekyll:
