--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -61,6 +61,7 @@ jobs:
         git config user.name "${GITHUB_ACTOR}"
         git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
         git add -f docs/_site
+        git add -f .nojekyll
         git commit -m "jekyll build from Action ${GITHUB_SHA}"
         git push --force origin HEAD:${REMOTE_BRANCH}
       env:
