--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -16,8 +16,8 @@ jobs:
     steps:
       - name: Install odrivetool
         run: |
-          pip install monotonic # TODO: this is dishonest. Must be removed as soon as v0.5.0 is published!
-          pip install odrive
+          pip3 install monotonic # TODO: this is dishonest. Must be removed as soon as v0.5.0 is published!
+          pip3 install odrive
 
       # This one currently fails because Github Actions runs pip as non-root
       #- name: Check if udev rules were set up properly
